<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/NewTakToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="New Task"
        android:background="@color/md_blue_400"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textSize="17sp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:textColor="?attr/colorAccent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NewTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/task_name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="17sp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorAccent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NewTaskDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="start"
            android:lines="4"
            android:hint="@string/description"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/date_and_time"
        android:textColor="?attr/colorAccent"
        android:textSize="17sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NewTaskDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:textSize="15sp"
            android:drawableEnd="@drawable/ic_event_symbol"
            android:hint="@string/date"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NewTaskTimeLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:visibility="gone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NewTaskTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:drawableEnd="@drawable/ic_time_symbol"
            android:hint="@string/time"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="17sp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorAccent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_category_symbol"
            android:contentDescription="@string/todo" />

        <Spinner

            android:id="@+id/NewTaskSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_gravity="right"
        app:cornerRadius="24dp"
        android:text="@string/save"
        android:id="@+id/NewTaskBtnSave"
        tools:ignore="RtlHardcoded" />

</LinearLayout>